[gd_scene load_steps=3 format=3 uid="uid://b3e788l2qcir0"]

[ext_resource type="Script" path="res://Rest_Shop.gd" id="1_dvqgb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3qx6k"]
size = Vector2(15.8, 16)

[node name="market" type="Node2D"]
script = ExtResource("1_dvqgb")

[node name="Option_1" type="TextEdit" parent="."]
offset_right = 144.0
offset_bottom = 36.0
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
metadata/_edit_use_anchors_ = true

[node name="Option_1_Area" type="Area2D" parent="."]

[node name="Option_1_Size" type="CollisionShape2D" parent="Option_1_Area"]
position = Vector2(63.5, 93)
scale = Vector2(2.5, 2.5)
shape = SubResource("RectangleShape2D_3qx6k")

[node name="Option_1_Sprite" type="Sprite2D" parent="Option_1_Area"]

[node name="Option_2" type="TextEdit" parent="."]
offset_left = 232.0
offset_right = 376.0
offset_bottom = 36.0
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Option_2_Area" type="Area2D" parent="."]
position = Vector2(232, 0)

[node name="Option_2_Size" type="CollisionShape2D" parent="Option_2_Area"]
position = Vector2(74, 103)
scale = Vector2(2.5, 2.5)
shape = SubResource("RectangleShape2D_3qx6k")

[node name="Sprite2D" type="Sprite2D" parent="Option_2_Area"]

[node name="Option_3" type="TextEdit" parent="."]
offset_left = 464.0
offset_right = 608.0
offset_bottom = 36.0
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Option_3_Area" type="Area2D" parent="."]
position = Vector2(464, 0)

[node name="Option_3_Size" type="CollisionShape2D" parent="Option_3_Area"]
position = Vector2(74, 103)
scale = Vector2(2.5, 2.5)
shape = SubResource("RectangleShape2D_3qx6k")

[node name="Sprite2D" type="Sprite2D" parent="Option_3_Area"]

[node name="Description_1" type="TextEdit" parent="."]
offset_left = -42.0
offset_top = -368.0
offset_right = 187.0
offset_bottom = -24.0
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1

[node name="Description_2" type="TextEdit" parent="."]
offset_left = 187.0
offset_top = -368.0
offset_right = 416.0
offset_bottom = -24.0
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1

[node name="Description_3" type="TextEdit" parent="."]
offset_left = 416.0
offset_top = -368.0
offset_right = 645.0
offset_bottom = -24.0
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1

[connection signal="area_entered" from="Option_1_Area" to="." method="_on_option_1_area_area_entered"]
[connection signal="area_exited" from="Option_1_Area" to="." method="_on_option_1_area_area_exited"]
[connection signal="area_entered" from="Option_2_Area" to="." method="_on_option_2_area_area_entered"]
[connection signal="area_exited" from="Option_2_Area" to="." method="_on_option_2_area_area_exited"]
[connection signal="area_entered" from="Option_3_Area" to="." method="_on_option_3_area_area_entered"]
[connection signal="area_exited" from="Option_3_Area" to="." method="_on_option_3_area_area_exited"]
